--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-toastify": "^9.1.1",
     "slick-carousel": "^1.8.1",
     "stripe": "^11.9.1",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
