--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-calendar": "^4.1.1",
     "react-calendly": "^4.1.1",
+    "react-datepicker": "^4.15.0",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
     "react-places-autocomplete": "^7.3.0",
